// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Alert AllVariants smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_success_1xb9d_42 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 2a10 10 0 0 1 10 10c0 5.523-4.477 10-10 10a10 10 0 0 1 0-20Zm-1 14.5 7-7-1.41-1.41L11 13.67l-3.09-3.08L6.5 12l4.5 4.5Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_warning_1xb9d_56 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
  <div aria-live="assertive"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_danger_1xb9d_63 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert AllVariantsMobile smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_success_1xb9d_42 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 2a10 10 0 0 1 10 10c0 5.523-4.477 10-10 10a10 10 0 0 1 0-20Zm-1 14.5 7-7-1.41-1.41L11 13.67l-3.09-3.08L6.5 12l4.5 4.5Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_warning_1xb9d_56 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
  <div aria-live="assertive"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_danger_1xb9d_63 bottomSpacingXL">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert Defaults play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
  </div>
</div>
`;

exports[`Tester/Alert DefaultsWithMessage play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert VariantDanger play-test 1`] = `
<div data-test-block="true">
  <div aria-live="assertive"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_danger_1xb9d_63 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert VariantNeutral play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert VariantSuccess play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_success_1xb9d_42 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 2a10 10 0 0 1 10 10c0 5.523-4.477 10-10 10a10 10 0 0 1 0-20Zm-1 14.5 7-7-1.41-1.41L11 13.67l-3.09-3.08L6.5 12l4.5 4.5Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert VariantWarning play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_warning_1xb9d_56 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithAriaLiveOff play-test 1`] = `
<div data-test-block="true">
  <div aria-live="off"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       lang="en"
       data-testid="123ID"
       aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 dummyClassname">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithCloseButton smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
      <button class="_button_g87u5_1 _button_small_g87u5_37  _closeButton_1xb9d_30"
              type="button"
      >
        <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_g87u5_22"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:rk:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:rk:">
            Lukk melding
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithCloseOnClickButton play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
  </div>
</div>
`;

exports[`Tester/Alert WithCustomIcon smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M12 17a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm6-9a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V10a2 2 0 0 1 2-2h1V6a5 5 0 1 1 10 0v2h1Zm-6-5a3 3 0 0 0-3 3v2h6V6a3 3 0 0 0-3-3Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithCustomSVGPath smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithLongText smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvist av kortutsteder. Ta kontakt med kortutsteder for mer informasjon. Dersom teksten går over flere linjer, så vil ikonene beholde plasseringen sin.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithLongTextAndBreaking smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        Avvistavkortutsteder.Takontaktmedkortutstederformerinformasjon.Dersomtekstengåroverflerelinjer,såvilikonenebeholdeplasseringensin.
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
  >
    <div class="_alert_1xb9d_1 _alert_neutral_1xb9d_49 ">
      <span class="_iconWrapper_1xb9d_6">
        <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1xb9d_6"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
      </span>
      <span class="_content_1xb9d_15">
        <h1 class="_heading_12p5o_1 _heading_level4_12p5o_43  ">
          Avvist av kortutsteder
        </h1>
        <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
          Ta kontakt med kortutsteder for
          <a href="#storybook-root">
            mer informasjon
          </a>
        </p>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tester/Alert WithRef play-test 1`] = `
<div data-test-block="true">
  <div aria-live="polite"
       aria-atomic="true"
       id="dummyIdForwardedFromRef"
  >
  </div>
</div>
`;
